--- a/src/app/peliculas/pages/mostrar-pelicula/mostrar-pelicula.component.html
+++ b/src/app/peliculas/pages/mostrar-pelicula/mostrar-pelicula.component.html
@@ -13,7 +13,7 @@
       <mat-card-title>{{peliculaDetalle.title}}</mat-card-title>
       <mat-card-subtitle>Idioma: {{peliculaDetalle.original_language}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image [src]="peliculaDetalle | detalleImage" alt="{{peliculaDetalle.title}}" style="height: auto;">
+    <img mat-card-image [src]="peliculaDetalle.poster_path| detalleImage" alt="{{peliculaDetalle.title}}" style="height: auto;">
   </mat-card>
 
 <mat-card class="col-12 sm:col-6" style="background-color: rgb(212, 169, 252);" >
@@ -22,13 +22,19 @@
     <mat-card-subtitle *ngIf="peliculaDetalle.homepage">Link Pelicula: <a href="{{peliculaDetalle.homepage}}">{{peliculaDetalle.homepage}}</a></mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-list>
-      <mat-list-item>Popularidad: {{peliculaDetalle.popularity}}</mat-list-item>
-      <mat-list-item>Titulo Original: {{peliculaDetalle.original_title}}</mat-list-item>
-      <mat-list-item>Recuento de votos:{{peliculaDetalle.vote_count}}</mat-list-item>
-    </mat-list>
+
+      <p><strong>Popularidad: </strong>{{peliculaDetalle.popularity}}</p>
+      <p><strong>Titulo Orginal: </strong>{{peliculaDetalle.original_title}}</p>
+      <p><strong>Descripcion: </strong>{{peliculaDetalle.overview}}</p>
+      <p><strong>Votos: </strong>{{peliculaDetalle.vote_count}}</p>
+      <p><strong>Generos: </strong></p>
+      <mat-chip-listbox aria-label="Lista de géneros">
+        <mat-chip *ngFor="let genre of (listaGenres.length > 0 ? listaGenres : [{ name: 'Desconocido', id: 0 }])" class="genre-chip">
+          {{ genre.name }}
+        </mat-chip>
+      </mat-chip-listbox>
   </mat-card-content>
-  <button mat-flat-button class="d-flex align-items-center" color="primary" (click)="back()">
+  <button mat-flat-button class="d-flex align-items-center mt-2" color="primary" (click)="back()">
     <mat-icon>arrow_back</mat-icon>
     <span>Volver</span>
   </button>
