--- a/src/app/peliculas/pages/layout-pelicula/layout-pelicula.component.html
+++ b/src/app/peliculas/pages/layout-pelicula/layout-pelicula.component.html
@@ -9,11 +9,20 @@
     </mat-toolbar>
 
     <mat-nav-list>
-      <mat-divider></mat-divider>
-      <mat-list-item *ngFor="let item of sidebarItems" (click)="sidenav.close()" [routerLink]="item.route">
-        <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-        <span>{{ item.label }}</span>
-      </mat-list-item>
+        <a *ngFor="let item of sidebarItems" href="{{item.url}}" (click)="sidenav.close()">
+        <mat-list-item matListItemTitle>
+          <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+          {{item.label}}
+        </mat-list-item>
+        </a>
+
+        <a *ngIf="idRol == 1" href="usuarios/lista-usuarios" (click)="sidenav.toggle()">
+        <mat-list-item matListItemTitle>
+          <mat-icon>person</mat-icon>
+          Usuarios
+        </mat-list-item>
+        </a>
+
     </mat-nav-list>
   </mat-sidenav>
 
